Wed Sep 18 12:56:05 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* std-runtime-argp.c <argp.h>: New include.
	* std-startup-argp.c <argp.h>: New include.
	* fsys-get-options.c (netfs_S_fsys_get_options): Initialize ARGZ
	with the program name, and call netfs_append_args instead of
	netfs_get_options.
	* file-get-fs-options.c (netfs_S_file_get_fs_options): Likewise.
	* append-std-options.c (netfs_append_std_options): Doc fix.
	* netfs.h (netfs_append_args): New declaration.
	(netfs_get_options): Declaration removed.
	<argp.h>: Include removed.
	* append-args.c (netfs_append_args): New file.
	* Makefile (OTHERSRCS): Replace get-options.c with append-args.c

	* file-get-translator.c <stdio.h>: New include.

Fri Aug 16 19:20:22 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* priv.h (end_using_protid_port): Only call ports_port_deref if
	CRED is set.

Fri Jul 26 14:34:11 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* file-exec.c (netfs_S_file_exec): Unlock NP before we attempt to
 	do setuid/setgid (which otherwise can deadlock during port reauth).
	Pay attention to the error code returned by fshelp_exec_reauth,
	and don't make NEWPI if it's an error.

Tue Jul 23 14:28:33 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* file-utimes.c (netfs_S_file_utimes): `struct timespec' now uses
	a field prefix of `tv_'.

Thu Jul 18 23:09:54 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-reauthenticate.c (netfs_S_io_reauthenticate): After attaching
	credential to NEWPI, install it in NETFS_PORT_BUCKET->portset.
	* make-protid.c (netfs_make_protid): If CRED is null, use
	noinstall version of ports_create_port.

Sat Jul 13 20:10:02 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* io-reauthenticate.c (netfs_S_io_reauthenticate): Repeat
 	auth_server_authenticate for as long as we get EINTR.  Tolerate
 	other errors without crashing as well.

Sun Jul  7 21:28:54 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>
