@@ -1,0 +1,3 @@
+#define NETFS_EI
+#include "netfs.h"
+
